2022/05/01    Nakata Maho <maho@riken.jp> 2.0 branch
            * se2.in: Tests for Hermitian Eigenvalue Problem routines for complex numbers have passed
              for all precisions.

2022/04/30    Nakata Maho <maho@riken.jp> 2.0 branch
            * sep.in: Tests for Hermitian Eigenvalue Problem routines for complex numbers have passed
              for all precisions.

2022/04/26    Nakata Maho <maho@riken.jp> 2.0 branch
            * nep.in: Test for Nonsymmetric Eigenvalue Problem routines for complex have passed
              for all precisions.
            * lse.in: Test for Constrained Linear Least Squares routines for complex have passed
              for all precisions.
            * Csb.in: Test for Hermitian Eigenvalue Problem routines have passed
            * glm.in: Tests of the Generalized Linear Regression Model routines for complex have passed
            * gqr.in: testing Generalized QR and RQ routines for complex have passed
            * Cbb.in: reduction of a general band matrix to real bidiagonal form tests have passed

2022/04/24    Nakata Maho <maho@riken.jp> 2.0 branch
            * Cec.in test (Testing complex Eigen Condition Routines) have passed for all precisions.

2022/03/21    Nakata Maho <maho@riken.jp> 2.0 branch
            * Ctest.in test have passed for all precisions, except for linear fitting.
              Some tests using SVDs still fails, however, they will be fixed when eig tests
              will be done.

2021/10/29    Nakata Maho <maho@riken.jp> 1.0.1
            * Add -fp-model precise to fix qd and dd arithmetic for Intel one API.

2021/10/01    Nakata Maho <maho@riken.jp> 1.0.0
            * Release 1.0.0

2021/08/05    Nakata Maho <maho@riken.jp> 1.0.0
            * all test programs are built successfully on Ubuntu20.04 (amd64)

2021/7/28    Nakata Maho <maho@riken.jp> 1.0.0
            * Tests of Nonsymmetric Generalized Eigenvalue Problem driver routines
              (Rgd.in) have passed for MPFR version.