@@ -119,7 +119,7 @@ void Cgecon(const char *norm, mplapackint const n, std::complex<_Float128> *a, m
 void Cgeequ(mplapackint const m, mplapackint const n, std::complex<_Float128> *a, mplapackint const lda, _Float128 *r, _Float128 *c, _Float128 &rowcnd, _Float128 &colcnd, _Float128 &amax, mplapackint &info);
 void Cgeequb(mplapackint const m, mplapackint const n, std::complex<_Float128> *a, mplapackint const lda, _Float128 *r, _Float128 *c, _Float128 &rowcnd, _Float128 &colcnd, _Float128 &amax, mplapackint &info);
 void Cgees(const char *jobvs, const char *sort, bool (*select)(std::complex<_Float128>), mplapackint const n, std::complex<_Float128> *a, mplapackint const lda, mplapackint &sdim, std::complex<_Float128> *w, std::complex<_Float128> *vs, mplapackint const ldvs, std::complex<_Float128> *work, mplapackint const lwork, _Float128 *rwork, bool *bwork, mplapackint &info);
-void Cgeesx(const char *jobvs, const char *sort, bool (*select)(std::complex<_Float128>), const char *sense, mplapackint const n, std::complex<_Float128> *a, mplapackint const lda, mplapackint &sdim, std::complex<_Float128> *w, std::complex<_Float128> *vs, mplapackint const ldvs, _Float128 rconde, _Float128 &rcondv, std::complex<_Float128> *work, mplapackint const lwork, _Float128 *rwork, bool *bwork, mplapackint &info);
+void Cgeesx(const char *jobvs, const char *sort, bool (*select)(std::complex<_Float128>), const char *sense, mplapackint const n, std::complex<_Float128> *a, mplapackint const lda, mplapackint &sdim, std::complex<_Float128> *w, std::complex<_Float128> *vs, mplapackint const ldvs, _Float128 &rconde, _Float128 &rcondv, std::complex<_Float128> *work, mplapackint const lwork, _Float128 *rwork, bool *bwork, mplapackint &info);
 void Cgeev(const char *jobvl, const char *jobvr, mplapackint const n, std::complex<_Float128> *a, mplapackint const lda, std::complex<_Float128> *w, std::complex<_Float128> *vl, mplapackint const ldvl, std::complex<_Float128> *vr, mplapackint const ldvr, std::complex<_Float128> *work, mplapackint const lwork, _Float128 *rwork, mplapackint &info);
 void Cgeevx(const char *balanc, const char *jobvl, const char *jobvr, const char *sense, mplapackint const n, std::complex<_Float128> *a, mplapackint const lda, std::complex<_Float128> *w, std::complex<_Float128> *vl, mplapackint const ldvl, std::complex<_Float128> *vr, mplapackint const ldvr, mplapackint ilo, mplapackint ihi, _Float128 *scale, _Float128 &abnrm, _Float128 *rconde, _Float128 *rcondv, std::complex<_Float128> *work, mplapackint const lwork, _Float128 *rwork, mplapackint &info);
 void Cgehd2(mplapackint const n, mplapackint const ilo, mplapackint const ihi, std::complex<_Float128> *a, mplapackint const lda, std::complex<_Float128> *tau, std::complex<_Float128> *work, mplapackint &info);
