@@ -115,7 +115,7 @@ void Cgecon(const char *norm, mplapackint const n, std::complex<_Float64x> *a, m
 void Cgeequ(mplapackint const m, mplapackint const n, std::complex<_Float64x> *a, mplapackint const lda, _Float64x *r, _Float64x *c, _Float64x &rowcnd, _Float64x &colcnd, _Float64x &amax, mplapackint &info);
 void Cgeequb(mplapackint const m, mplapackint const n, std::complex<_Float64x> *a, mplapackint const lda, _Float64x *r, _Float64x *c, _Float64x &rowcnd, _Float64x &colcnd, _Float64x &amax, mplapackint &info);
 void Cgees(const char *jobvs, const char *sort, bool (*select)(std::complex<_Float64x>), mplapackint const n, std::complex<_Float64x> *a, mplapackint const lda, mplapackint &sdim, std::complex<_Float64x> *w, std::complex<_Float64x> *vs, mplapackint const ldvs, std::complex<_Float64x> *work, mplapackint const lwork, _Float64x *rwork, bool *bwork, mplapackint &info);
-void Cgeesx(const char *jobvs, const char *sort, bool (*select)(std::complex<_Float64x>), const char *sense, mplapackint const n, std::complex<_Float64x> *a, mplapackint const lda, mplapackint &sdim, std::complex<_Float64x> *w, std::complex<_Float64x> *vs, mplapackint const ldvs, _Float64x rconde, _Float64x &rcondv, std::complex<_Float64x> *work, mplapackint const lwork, _Float64x *rwork, bool *bwork, mplapackint &info);
+void Cgeesx(const char *jobvs, const char *sort, bool (*select)(std::complex<_Float64x>), const char *sense, mplapackint const n, std::complex<_Float64x> *a, mplapackint const lda, mplapackint &sdim, std::complex<_Float64x> *w, std::complex<_Float64x> *vs, mplapackint const ldvs, _Float64x &rconde, _Float64x &rcondv, std::complex<_Float64x> *work, mplapackint const lwork, _Float64x *rwork, bool *bwork, mplapackint &info);
 void Cgeev(const char *jobvl, const char *jobvr, mplapackint const n, std::complex<_Float64x> *a, mplapackint const lda, std::complex<_Float64x> *w, std::complex<_Float64x> *vl, mplapackint const ldvl, std::complex<_Float64x> *vr, mplapackint const ldvr, std::complex<_Float64x> *work, mplapackint const lwork, _Float64x *rwork, mplapackint &info);
 void Cgeevx(const char *balanc, const char *jobvl, const char *jobvr, const char *sense, mplapackint const n, std::complex<_Float64x> *a, mplapackint const lda, std::complex<_Float64x> *w, std::complex<_Float64x> *vl, mplapackint const ldvl, std::complex<_Float64x> *vr, mplapackint const ldvr, mplapackint ilo, mplapackint ihi, _Float64x *scale, _Float64x &abnrm, _Float64x *rconde, _Float64x *rcondv, std::complex<_Float64x> *work, mplapackint const lwork, _Float64x *rwork, mplapackint &info);
 void Cgehd2(mplapackint const n, mplapackint const ilo, mplapackint const ihi, std::complex<_Float64x> *a, mplapackint const lda, std::complex<_Float64x> *tau, std::complex<_Float64x> *work, mplapackint &info);
