@@ -117,7 +117,7 @@ void Cgecon(const char *norm, mplapackint const n, dd_complex *a, mplapackint co
 void Cgeequ(mplapackint const m, mplapackint const n, dd_complex *a, mplapackint const lda, dd_real *r, dd_real *c, dd_real &rowcnd, dd_real &colcnd, dd_real &amax, mplapackint &info);
 void Cgeequb(mplapackint const m, mplapackint const n, dd_complex *a, mplapackint const lda, dd_real *r, dd_real *c, dd_real &rowcnd, dd_real &colcnd, dd_real &amax, mplapackint &info);
 void Cgees(const char *jobvs, const char *sort, bool (*select)(dd_complex), mplapackint const n, dd_complex *a, mplapackint const lda, mplapackint &sdim, dd_complex *w, dd_complex *vs, mplapackint const ldvs, dd_complex *work, mplapackint const lwork, dd_real *rwork, bool *bwork, mplapackint &info);
-void Cgeesx(const char *jobvs, const char *sort, bool (*select)(dd_complex), const char *sense, mplapackint const n, dd_complex *a, mplapackint const lda, mplapackint &sdim, dd_complex *w, dd_complex *vs, mplapackint const ldvs, dd_real rconde, dd_real &rcondv, dd_complex *work, mplapackint const lwork, dd_real *rwork, bool *bwork, mplapackint &info);
+void Cgeesx(const char *jobvs, const char *sort, bool (*select)(dd_complex), const char *sense, mplapackint const n, dd_complex *a, mplapackint const lda, mplapackint &sdim, dd_complex *w, dd_complex *vs, mplapackint const ldvs, dd_real &rconde, dd_real &rcondv, dd_complex *work, mplapackint const lwork, dd_real *rwork, bool *bwork, mplapackint &info);
 void Cgeev(const char *jobvl, const char *jobvr, mplapackint const n, dd_complex *a, mplapackint const lda, dd_complex *w, dd_complex *vl, mplapackint const ldvl, dd_complex *vr, mplapackint const ldvr, dd_complex *work, mplapackint const lwork, dd_real *rwork, mplapackint &info);
 void Cgeevx(const char *balanc, const char *jobvl, const char *jobvr, const char *sense, mplapackint const n, dd_complex *a, mplapackint const lda, dd_complex *w, dd_complex *vl, mplapackint const ldvl, dd_complex *vr, mplapackint const ldvr, mplapackint ilo, mplapackint ihi, dd_real *scale, dd_real &abnrm, dd_real *rconde, dd_real *rcondv, dd_complex *work, mplapackint const lwork, dd_real *rwork, mplapackint &info);
 void Cgehd2(mplapackint const n, mplapackint const ilo, mplapackint const ihi, dd_complex *a, mplapackint const lda, dd_complex *tau, dd_complex *work, mplapackint &info);
