@@ -115,7 +115,7 @@ void Cgecon(const char *norm, mplapackint const n, std::complex<double> *a, mpla
 void Cgeequ(mplapackint const m, mplapackint const n, std::complex<double> *a, mplapackint const lda, double *r, double *c, double &rowcnd, double &colcnd, double &amax, mplapackint &info);
 void Cgeequb(mplapackint const m, mplapackint const n, std::complex<double> *a, mplapackint const lda, double *r, double *c, double &rowcnd, double &colcnd, double &amax, mplapackint &info);
 void Cgees(const char *jobvs, const char *sort, bool (*select)(std::complex<double>), mplapackint const n, std::complex<double> *a, mplapackint const lda, mplapackint &sdim, std::complex<double> *w, std::complex<double> *vs, mplapackint const ldvs, std::complex<double> *work, mplapackint const lwork, double *rwork, bool *bwork, mplapackint &info);
-void Cgeesx(const char *jobvs, const char *sort, bool (*select)(std::complex<double>), const char *sense, mplapackint const n, std::complex<double> *a, mplapackint const lda, mplapackint &sdim, std::complex<double> *w, std::complex<double> *vs, mplapackint const ldvs, double rconde, double &rcondv, std::complex<double> *work, mplapackint const lwork, double *rwork, bool *bwork, mplapackint &info);
+void Cgeesx(const char *jobvs, const char *sort, bool (*select)(std::complex<double>), const char *sense, mplapackint const n, std::complex<double> *a, mplapackint const lda, mplapackint &sdim, std::complex<double> *w, std::complex<double> *vs, mplapackint const ldvs, double &rconde, double &rcondv, std::complex<double> *work, mplapackint const lwork, double *rwork, bool *bwork, mplapackint &info);
 void Cgeev(const char *jobvl, const char *jobvr, mplapackint const n, std::complex<double> *a, mplapackint const lda, std::complex<double> *w, std::complex<double> *vl, mplapackint const ldvl, std::complex<double> *vr, mplapackint const ldvr, std::complex<double> *work, mplapackint const lwork, double *rwork, mplapackint &info);
 void Cgeevx(const char *balanc, const char *jobvl, const char *jobvr, const char *sense, mplapackint const n, std::complex<double> *a, mplapackint const lda, std::complex<double> *w, std::complex<double> *vl, mplapackint const ldvl, std::complex<double> *vr, mplapackint const ldvr, mplapackint ilo, mplapackint ihi, double *scale, double &abnrm, double *rconde, double *rcondv, std::complex<double> *work, mplapackint const lwork, double *rwork, mplapackint &info);
 void Cgehd2(mplapackint const n, mplapackint const ilo, mplapackint const ihi, std::complex<double> *a, mplapackint const lda, std::complex<double> *tau, std::complex<double> *work, mplapackint &info);
