@@ -117,7 +117,7 @@ void Cgecon(const char *norm, mplapackint const n, mpc_class *a, mplapackint con
 void Cgeequ(mplapackint const m, mplapackint const n, mpc_class *a, mplapackint const lda, mpf_class *r, mpf_class *c, mpf_class &rowcnd, mpf_class &colcnd, mpf_class &amax, mplapackint &info);
 void Cgeequb(mplapackint const m, mplapackint const n, mpc_class *a, mplapackint const lda, mpf_class *r, mpf_class *c, mpf_class &rowcnd, mpf_class &colcnd, mpf_class &amax, mplapackint &info);
 void Cgees(const char *jobvs, const char *sort, bool (*select)(mpc_class), mplapackint const n, mpc_class *a, mplapackint const lda, mplapackint &sdim, mpc_class *w, mpc_class *vs, mplapackint const ldvs, mpc_class *work, mplapackint const lwork, mpf_class *rwork, bool *bwork, mplapackint &info);
-void Cgeesx(const char *jobvs, const char *sort, bool (*select)(mpc_class), const char *sense, mplapackint const n, mpc_class *a, mplapackint const lda, mplapackint &sdim, mpc_class *w, mpc_class *vs, mplapackint const ldvs, mpf_class rconde, mpf_class &rcondv, mpc_class *work, mplapackint const lwork, mpf_class *rwork, bool *bwork, mplapackint &info);
+void Cgeesx(const char *jobvs, const char *sort, bool (*select)(mpc_class), const char *sense, mplapackint const n, mpc_class *a, mplapackint const lda, mplapackint &sdim, mpc_class *w, mpc_class *vs, mplapackint const ldvs, mpf_class &rconde, mpf_class &rcondv, mpc_class *work, mplapackint const lwork, mpf_class *rwork, bool *bwork, mplapackint &info);
 void Cgeev(const char *jobvl, const char *jobvr, mplapackint const n, mpc_class *a, mplapackint const lda, mpc_class *w, mpc_class *vl, mplapackint const ldvl, mpc_class *vr, mplapackint const ldvr, mpc_class *work, mplapackint const lwork, mpf_class *rwork, mplapackint &info);
 void Cgeevx(const char *balanc, const char *jobvl, const char *jobvr, const char *sense, mplapackint const n, mpc_class *a, mplapackint const lda, mpc_class *w, mpc_class *vl, mplapackint const ldvl, mpc_class *vr, mplapackint const ldvr, mplapackint ilo, mplapackint ihi, mpf_class *scale, mpf_class &abnrm, mpf_class *rconde, mpf_class *rcondv, mpc_class *work, mplapackint const lwork, mpf_class *rwork, mplapackint &info);
 void Cgehd2(mplapackint const n, mplapackint const ilo, mplapackint const ihi, mpc_class *a, mplapackint const lda, mpc_class *tau, mpc_class *work, mplapackint &info);
