@@ -121,7 +121,7 @@ void Cgecon(const char *norm, mplapackint const n, mpcomplex *a, mplapackint con
 void Cgeequ(mplapackint const m, mplapackint const n, mpcomplex *a, mplapackint const lda, mpreal *r, mpreal *c, mpreal &rowcnd, mpreal &colcnd, mpreal &amax, mplapackint &info);
 void Cgeequb(mplapackint const m, mplapackint const n, mpcomplex *a, mplapackint const lda, mpreal *r, mpreal *c, mpreal &rowcnd, mpreal &colcnd, mpreal &amax, mplapackint &info);
 void Cgees(const char *jobvs, const char *sort, bool (*select)(mpcomplex), mplapackint const n, mpcomplex *a, mplapackint const lda, mplapackint &sdim, mpcomplex *w, mpcomplex *vs, mplapackint const ldvs, mpcomplex *work, mplapackint const lwork, mpreal *rwork, bool *bwork, mplapackint &info);
-void Cgeesx(const char *jobvs, const char *sort, bool (*select)(mpcomplex), const char *sense, mplapackint const n, mpcomplex *a, mplapackint const lda, mplapackint &sdim, mpcomplex *w, mpcomplex *vs, mplapackint const ldvs, mpreal rconde, mpreal &rcondv, mpcomplex *work, mplapackint const lwork, mpreal *rwork, bool *bwork, mplapackint &info);
+void Cgeesx(const char *jobvs, const char *sort, bool (*select)(mpcomplex), const char *sense, mplapackint const n, mpcomplex *a, mplapackint const lda, mplapackint &sdim, mpcomplex *w, mpcomplex *vs, mplapackint const ldvs, mpreal &rconde, mpreal &rcondv, mpcomplex *work, mplapackint const lwork, mpreal *rwork, bool *bwork, mplapackint &info);
 void Cgeev(const char *jobvl, const char *jobvr, mplapackint const n, mpcomplex *a, mplapackint const lda, mpcomplex *w, mpcomplex *vl, mplapackint const ldvl, mpcomplex *vr, mplapackint const ldvr, mpcomplex *work, mplapackint const lwork, mpreal *rwork, mplapackint &info);
 void Cgeevx(const char *balanc, const char *jobvl, const char *jobvr, const char *sense, mplapackint const n, mpcomplex *a, mplapackint const lda, mpcomplex *w, mpcomplex *vl, mplapackint const ldvl, mpcomplex *vr, mplapackint const ldvr, mplapackint ilo, mplapackint ihi, mpreal *scale, mpreal &abnrm, mpreal *rconde, mpreal *rcondv, mpcomplex *work, mplapackint const lwork, mpreal *rwork, mplapackint &info);
 void Cgehd2(mplapackint const n, mplapackint const ilo, mplapackint const ihi, mpcomplex *a, mplapackint const lda, mpcomplex *tau, mpcomplex *work, mplapackint &info);
