@@ -117,7 +117,7 @@ void Cgecon(const char *norm, mplapackint const n, qd_complex *a, mplapackint co
 void Cgeequ(mplapackint const m, mplapackint const n, qd_complex *a, mplapackint const lda, qd_real *r, qd_real *c, qd_real &rowcnd, qd_real &colcnd, qd_real &amax, mplapackint &info);
 void Cgeequb(mplapackint const m, mplapackint const n, qd_complex *a, mplapackint const lda, qd_real *r, qd_real *c, qd_real &rowcnd, qd_real &colcnd, qd_real &amax, mplapackint &info);
 void Cgees(const char *jobvs, const char *sort, bool (*select)(qd_complex), mplapackint const n, qd_complex *a, mplapackint const lda, mplapackint &sdim, qd_complex *w, qd_complex *vs, mplapackint const ldvs, qd_complex *work, mplapackint const lwork, qd_real *rwork, bool *bwork, mplapackint &info);
-void Cgeesx(const char *jobvs, const char *sort, bool (*select)(qd_complex), const char *sense, mplapackint const n, qd_complex *a, mplapackint const lda, mplapackint &sdim, qd_complex *w, qd_complex *vs, mplapackint const ldvs, qd_real rconde, qd_real &rcondv, qd_complex *work, mplapackint const lwork, qd_real *rwork, bool *bwork, mplapackint &info);
+void Cgeesx(const char *jobvs, const char *sort, bool (*select)(qd_complex), const char *sense, mplapackint const n, qd_complex *a, mplapackint const lda, mplapackint &sdim, qd_complex *w, qd_complex *vs, mplapackint const ldvs, qd_real &rconde, qd_real &rcondv, qd_complex *work, mplapackint const lwork, qd_real *rwork, bool *bwork, mplapackint &info);
 void Cgeev(const char *jobvl, const char *jobvr, mplapackint const n, qd_complex *a, mplapackint const lda, qd_complex *w, qd_complex *vl, mplapackint const ldvl, qd_complex *vr, mplapackint const ldvr, qd_complex *work, mplapackint const lwork, qd_real *rwork, mplapackint &info);
 void Cgeevx(const char *balanc, const char *jobvl, const char *jobvr, const char *sense, mplapackint const n, qd_complex *a, mplapackint const lda, qd_complex *w, qd_complex *vl, mplapackint const ldvl, qd_complex *vr, mplapackint const ldvr, mplapackint ilo, mplapackint ihi, qd_real *scale, qd_real &abnrm, qd_real *rconde, qd_real *rcondv, qd_complex *work, mplapackint const lwork, qd_real *rwork, mplapackint &info);
 void Cgehd2(mplapackint const n, mplapackint const ilo, mplapackint const ihi, qd_complex *a, mplapackint const lda, qd_complex *tau, qd_complex *work, mplapackint &info);
