@@ -182,12 +182,12 @@ void Cget24(bool const comp, INTEGER const jtype, REAL const thresh, INTEGER *is
         wnorm = Clange("1", n, n, vs1, ldvs, rwork);
         //
         if (anorm > wnorm) {
-            result[(2 + rsub) - 1] = (wnorm / anorm) / (n * ulp);
+            result[(2 + rsub) - 1] = (wnorm / anorm) / (castREAL(n) * ulp);
         } else {
             if (anorm < one) {
-                result[(2 + rsub) - 1] = (min(wnorm, REAL(n * anorm)) / anorm) / (n * ulp);
+                result[(2 + rsub) - 1] = (min(wnorm, REAL(castREAL(n) * anorm)) / anorm) / (castREAL(n) * ulp);
             } else {
-                result[(2 + rsub) - 1] = min(REAL(wnorm / anorm), castREAL(n)) / (n * ulp);
+                result[(2 + rsub) - 1] = min(REAL(wnorm / anorm), castREAL(n)) / (castREAL(n) * ulp);
             }
         }
         //
